[gd_scene load_steps=24 format=3 uid="uid://d0p8uk6nibjtm"]

[ext_resource type="PackedScene" uid="uid://d2lg7n0j8phb3" path="res://Scenes/Componentes/header.tscn" id="1_5wv0r"]
[ext_resource type="Script" uid="uid://dnl0nk5qeatmg" path="res://Scripts/Vistas/nuevo_usuario.gd" id="1_74j83"]
[ext_resource type="Texture2D" uid="uid://dcqgdqe85sx62" path="res://Sprites/iconos/1x_web/ic_account_circle_white_48dp.png" id="2_dmn8k"]
[ext_resource type="Theme" uid="uid://ys5m5jo3mjhs" path="res://Sprites/Estilos/theme.tres" id="3_74j83"]
[ext_resource type="Theme" uid="uid://byuw71bepva6s" path="res://Sprites/Estilos/theme_ext.tres" id="4_vf4is"]
[ext_resource type="FontFile" uid="uid://bavu3i3dvljy3" path="res://Sprites/Estilos/AG_old_face_regular.otf" id="5_6y78o"]
[ext_resource type="Texture2D" uid="uid://s8w4icmg5naf" path="res://Sprites/iconos/1x_web/ic_highlight_remove_white_24dp.png" id="6_ktmfu"]
[ext_resource type="Texture2D" uid="uid://cxpf06getr8e8" path="res://Sprites/Referencias/wireframe_desktop.png" id="7_dmn8k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kwinh"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_83phy"]
bg_color = Color(0.713726, 0.819608, 0.760784, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xxscv"]
bg_color = Color(0.105882, 0.227451, 0.184314, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7cj2s"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xxscv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7cj2s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ds2bm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vxa8f"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wu55p"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_60x3v"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1yixh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l3bmo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jcpca"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3o22x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ghvkj"]

[node name="NuevoUsuario" type="Panel" groups=["vistas"]]
offset_right = 1142.0
offset_bottom = 602.0
theme_override_styles/panel = SubResource("StyleBoxFlat_kwinh")
script = ExtResource("1_74j83")
metadata/_edit_lock_ = true

[node name="Header" parent="." instance=ExtResource("1_5wv0r")]
layout_mode = 0

[node name="Fondo" type="Panel" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 336.0
offset_right = 1142.0
offset_bottom = 601.0
theme_override_styles/panel = SubResource("StyleBoxFlat_83phy")
metadata/_edit_lock_ = true

[node name="Crear" type="Panel" parent="."]
layout_mode = 0
offset_left = 326.0
offset_top = 121.0
offset_right = 871.0
offset_bottom = 557.0
theme_override_styles/panel = SubResource("StyleBoxFlat_xxscv")
metadata/_edit_lock_ = true

[node name="SprUsuario" type="Sprite2D" parent="Crear"]
position = Vector2(272, 37)
texture = ExtResource("2_dmn8k")
metadata/_edit_lock_ = true

[node name="LinNombre1" type="LineEdit" parent="Crear"]
layout_mode = 0
offset_left = 22.0
offset_top = 85.0
offset_right = 264.0
offset_bottom = 131.0
theme = ExtResource("3_74j83")
placeholder_text = "Nombre 1"
alignment = 1
caret_blink = true
caret_blink_interval = 0.5
metadata/_edit_lock_ = true

[node name="LinNombre2" type="LineEdit" parent="Crear"]
layout_mode = 0
offset_left = 281.0
offset_top = 84.0
offset_right = 523.0
offset_bottom = 130.0
theme = ExtResource("3_74j83")
placeholder_text = "Nombre 2"
alignment = 1
caret_blink = true
caret_blink_interval = 0.5
metadata/_edit_lock_ = true

[node name="LinApellido1" type="LineEdit" parent="Crear"]
layout_mode = 0
offset_left = 24.0
offset_top = 150.0
offset_right = 266.0
offset_bottom = 196.0
theme = ExtResource("3_74j83")
placeholder_text = "Apellido 1"
alignment = 1
caret_blink = true
caret_blink_interval = 0.5
metadata/_edit_lock_ = true

[node name="LinApellido2" type="LineEdit" parent="Crear"]
layout_mode = 0
offset_left = 281.0
offset_top = 147.0
offset_right = 523.0
offset_bottom = 193.0
theme = ExtResource("3_74j83")
placeholder_text = "Apellido 2"
alignment = 1
caret_blink = true
caret_blink_interval = 0.5
metadata/_edit_lock_ = true

[node name="LinCedula" type="LineEdit" parent="Crear"]
layout_mode = 0
offset_left = 26.0
offset_top = 210.0
offset_right = 268.0
offset_bottom = 256.0
theme = ExtResource("3_74j83")
placeholder_text = "CÃ©dula"
alignment = 1
caret_blink = true
caret_blink_interval = 0.5
metadata/_edit_lock_ = true

[node name="Nuevorol" type="Panel" parent="Crear"]
layout_mode = 0
offset_left = 333.0
offset_top = 210.0
offset_right = 467.0
offset_bottom = 253.0
theme_override_styles/panel = SubResource("StyleBoxFlat_7cj2s")
metadata/_edit_lock_ = true

[node name="OptNuevoRol" type="OptionButton" parent="Crear/Nuevorol" groups=["opt_roles"]]
layout_mode = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 135.0
offset_bottom = 44.0
focus_mode = 0
theme = ExtResource("4_vf4is")
alignment = 1
text_overrun_behavior = 3
metadata/_edit_lock_ = true

[node name="TxtMessage" type="Label" parent="Crear"]
layout_mode = 0
offset_left = 137.0
offset_top = 271.0
offset_right = 409.0
offset_bottom = 360.0
theme = ExtResource("3_74j83")
theme_override_colors/font_color = Color(0.752941, 0.596078, 0.329412, 1)
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
metadata/_edit_lock_ = true

[node name="BtnRegistrar" type="Button" parent="Crear"]
layout_mode = 0
offset_left = 201.0
offset_top = 371.0
offset_right = 346.0
offset_bottom = 416.0
focus_mode = 0
theme = ExtResource("3_74j83")
text = "Registrar"
metadata/_edit_lock_ = true

[node name="Volver" type="Panel" parent="."]
layout_mode = 0
offset_left = 14.0
offset_top = 90.0
offset_right = 151.0
offset_bottom = 166.0
theme_override_styles/panel = SubResource("StyleBoxFlat_xxscv")
metadata/_edit_lock_ = true

[node name="BtnVolver" type="Button" parent="Volver"]
layout_mode = 0
offset_left = 18.0
offset_top = 15.0
offset_right = 120.0
offset_bottom = 58.0
focus_mode = 0
theme_override_colors/font_disabled_color = Color(0.184314, 0.917647, 0.603922, 1)
theme_override_colors/font_hover_pressed_color = Color(0.184314, 0.917647, 0.603922, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0.352941, 1)
theme_override_colors/icon_disabled_color = Color(0.184314, 0.917647, 0.603922, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.184314, 0.92549, 0.607843, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 0.352941, 1)
theme_override_colors/icon_pressed_color = Color(0.180392, 0.909804, 0.6, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.184314, 0.917647, 0.603922, 1)
theme_override_fonts/font = ExtResource("5_6y78o")
theme_override_font_sizes/font_size = 22
theme_override_styles/focus = SubResource("StyleBoxEmpty_xxscv")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_7cj2s")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ds2bm")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_vxa8f")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_wu55p")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_60x3v")
theme_override_styles/hover = SubResource("StyleBoxEmpty_1yixh")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_l3bmo")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_jcpca")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_3o22x")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ghvkj")
text = "Volver"
icon = ExtResource("6_ktmfu")
metadata/_edit_lock_ = true

[node name="SprMockups" type="Sprite2D" parent="." groups=["ocultable"]]
visible = false
self_modulate = Color(1, 1, 1, 0.486275)
position = Vector2(-1170, 0)
scale = Vector2(1.5, 1.5)
texture = ExtResource("7_dmn8k")
centered = false
metadata/_edit_lock_ = true

[connection signal="pressed" from="Crear/BtnRegistrar" to="." method="_on_btn_registrar_pressed"]
[connection signal="pressed" from="Volver/BtnVolver" to="." method="_on_btn_volver_pressed"]
